# game-gl

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CopyOfCMakeCache.txt  Makefile  README.md  build.bat  build.sh  build.txt  cmake_install.cmake  debug.sh  file  gcc.bat  generate_html  imgui.ini  linux.sh  offset.vs  shader.fs  toolchain.cmake  vertex_1.glsl  wasm.bat  windows.bat  windows.sh
.history/: .gitignore_20240314213814  .gitignore_20240420211341  .gitignore_20240420211342  .gitignore_20240420211347  CMakeLists_20240316160655.txt  CMakeLists_20240412185714.txt  CMakeLists_20240412185721.txt  CMakeLists_20240412190013.txt  CMakeLists_20240412190014.txt  fragment_20240417201257.glsl  fragment_20240417201302.glsl  fragment_20240417201303.glsl  fragment_20240417201424.glsl  fragment_20240417201427.glsl  fragment_20240417201432.glsl  fragment_20240417201433.glsl  fragment_20240417201436.glsl  fragment_20240417201439.glsl  fragment_20240417201441.glsl  fragment_20240417201447.glsl  fragment_20240417201547.glsl  fragment_20240420211640.glsl  fragment_20240420211645.glsl  fragment_20240420211711.glsl  fragment_20240420211714.glsl  fragment_20240420211715.glsl  fragment_20240420211723.glsl  fragment_20240420211746.glsl  fragment_20240420211911.glsl  fragment_20240420212105.glsl  fragment_20240420212402.glsl  fragment_20240420212404.glsl  fragment_20240420212428.glsl  fragment_20240420212429.glsl  fragment_20240420212430.glsl  fragment_20240420212446.glsl  fragment_20240420212558.glsl  fragment_20240420212603.glsl  fragment_20240420212629.glsl  fragment_20240420212634.glsl  (+46 more)
.history/src/: main_20240412185157.cpp  main_20240412191108.cpp  main_20240412191114.cpp  main_20240412191527.cpp  main_20240412191542.cpp  main_20240412191551.cpp  main_20240412191552.cpp  main_20240412191558.cpp  main_20240412191612.cpp  main_20240412191613.cpp  main_20240412191636.cpp  main_20240412191653.cpp  main_20240412191957.cpp  main_20240412192014.cpp  main_20240412192306.cpp  main_20240412192313.cpp  main_20240412192319.cpp  main_20240412193353.cpp  main_20240412193357.cpp  main_20240412193750.cpp  main_20240412193809.cpp  main_20240412193812.cpp  main_20240412193815.cpp  main_20240412193831.cpp  main_20240412193832.cpp  main_20240412193846.cpp  main_20240412193948.cpp  main_20240412194020.cpp  main_20240412194022.cpp  main_20240412194023.cpp  main_20240412194039.cpp  main_20240412194041.cpp  main_20240412194046.cpp  main_20240412194047.cpp  main_20240412194126.cpp  main_20240412194129.cpp  main_20240412194212.cpp  main_20240412194241.cpp  main_20240412194243.cpp  main_20240417190325.cpp  (+254 more)
.history/tst/: test_20240420204507.cpp  test_20240420205235.cpp  test_20240420205420.cpp  test_20240420205422.cpp  test_20240420205435.cpp  test_20240420205904.cpp  test_20240420205908.cpp  test_20240420205942.cpp  test_20240420210339.cpp  test_20240420210345.cpp
.qwen/: PROJECT_SUMMARY.md
NeuroMonsters/: game  imgui.ini
assimp/: revision.h
audio/: imgui.ini
b/: CMakeCache.txt  Makefile  cmake_install.cmake
build-wasm/: CMakeCache.txt  Makefile  cmake_install.cmake
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
build-windows/configuration/: root_directory.h
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
configuration/: root_directory.h  root_directory.h.in
game/: Game.cpp  Game.h  SpriteRenderer.cpp  main.cpp
include/: Camera.hpp  Shader.hpp  Texture.hpp  Timer.hpp  Transform.hpp  Util.hpp  Vertex.hpp  gamemode.h  init.h  math.h  mathUtil.h  root.h  setup.h  transform.h  types.h  vertex.h
include/math/: common.h  math.h  program.cpp  vector.h
include/mesh/: arc.h  circle.h  cube.h  line_strip.h  mesh.h  plane.h  quad.h  ring.h  sphere.h  torus.h
include/utility/: floating_point.h  std_types.h  string_id.h
include_libs/GLFW/: emscripten_glfw3.h
include_libs/assimp/: revision.h
include_libs/assimpd/: revision.h
include_libs/tinyexpr/: tinyexpr.c  tinyexpr.h
levels/: main.lvl
models/: triangle-prism.glb
models/GameCube - The Legend of Zelda The Wind Waker - Medli/: Arms.dae  Harp.dae  HarpLight.dae  MediBody.dae  MedliWithArms.dae  MedliWithHarp.dae  MedliWithWings.dae  Wings.dae
models/GameCube - The Legend of Zelda The Wind Waker - Pirate Ship Interior/: Pirate Ship Interior (Baked Colors).dae  Pirate Ship Interior (No Texture Mirroring).dae  Pirate Ship Interior.dae
models/GameCube - The Legend of Zelda The Wind Waker - Windfall Island Lenzos Shop/: Lenzos Shop.mtl
models/Outset Island/: LOD44.dae  Room44.dae  Room44_bake.dae  light.dae  water.dae  water_bake.dae
models/hakos_baelz_3d_model_-_mmd_download/: scene.gltf
models/koseki_bijou/: scene.gltf
models/low_poly_mansion__house/: license.txt  scene.gltf
neuromonsters/: NeuroMonsters
neuromonsters/levels/: main.lvl
shaders/: 3d.fs  3d.vs  bloom.fs  blur.fs  blur.vs  calcLight.fs  corona.fs  effects.fs  fb.fs  fb.vs  fragment.glsl  functions.fs  functions.glsl  glow.fs  heatmap.fs  heatmap.vs  limb_darkening.fs  line.vs  line_heatmap.fs  line_heatmap.vs  mirror.fs  mirror.vs  outline.fs  outline.vs  particle.fs  particle.vs  planet.fs  planet.vs  post_processing.vs  primitive.fs  primitive.vs  reflection.fs  reflection.vs  shader.fs  shader.vs  skybox.fs  skybox.vs  star.fs  star.vs  vector.vs  (+1 more)
shaders/light/: fragment.glsl  vertex.glsl
shaders/model/: fragment.glsl  (+2 more)
src/: ConfigManager.hpp  GameMode.h  Gui.cpp  Gui.h  Log.h  Mesh.hpp  Model.cpp  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture1D.cpp  Texture1D.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  Transform.hpp  Util.cpp  Util.hpp  Vertex.cpp  gamemode.h  graph_main.cpp  main.cpp  math.h  model.h  tinyexpr_wrapper.cpp  types.h
test/: Shader.hpp  Texture.hpp  Vertex.hpp  main_minimal.cpp  movingPentagon.cpp  noclass.cpp  pentagon.cpp  scaleTrapezium.cpp  square.cpp  squareColor.cpp  test.cpp  triangleIntrpolation.cpp
textures/: bg.png-autosave.kra  bg.png~  sphere.avif
webgl/: full-sphere.js  index.html  neon-sphere.js  script.js  triangle.html  webgl.html
(+230 files in other folders)
